tests/kulezi_tests/good/multi_assign.lat
int main() {
    int x = 1;
    {
        int x = 10, y = x + 1;
        printInt(y);
    }

    return 0;
}