tests/kulezi_tests/bad/invalid_op024.lat
int main() {
    (new int[1]) / (new int[1]);
    
    return 0;
}